# HeroMotocomp

./: README.md
.github/workflows/: cd-workflow.yml  ci-workflow.yml
HeroMotoComp/: .gitignore  databricks.yml  pyproject.toml
HeroMotoComp/.github/workflows/: ci-workflow.yml
HeroMotoComp/.venv312/: pyvenv.cfg
HeroMotoComp/.venv312/Scripts/: activate  activate.bat
HeroMotoComp/notebooks/bronze/: hero_ingestion.ipynb
HeroMotoComp/notebooks/gold/: bike_daily_station_performance.ipynb  hero_bike_daily_ride_summary.ipynb  hero_enriched.ipynb
HeroMotoComp/notebooks/silver/: hero_cleaned.ipynb
HeroMotoComp/resources/: hero_job.job.yml
HeroMotoComp/resources/infrastructure/: schemas.yml  volumes.yml
HeroMotoComp/resources/jobs/: hero_job.job.yml
HeroMotoComp/src/heromotocomp/: main.py
HeroMotoComp/src/heromotocomp/global_utils/: datetime_utils.py
HeroMotoComp/src/heromotocomp/hero_utils/: bike_utils.py
HeroMotoComp/variables/: dev.yml  prod.yml  test.yml
