[project]
name = "HeroMotoComp"
version = "0.0.1"
authors = [{ name = "yogesh025yc@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]


[project.scripts]
main = "heromotocomp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heromotocomp"]
